...
    }
    
    var Header: some View {
        HStack{
            Text(self.typesVM.title)
                .textStyle(TypeDetailTitleStyle())
                .accessibility(identifier: "typeTitle")
                .padding(20)
            Spacer()
            Button(action: {
                self.sheetState.showingDetail = false
            }) {
                Image(systemName: Constants.Design.Image.xmark)
                    .foregroundColor(Color.white)
            }.buttonStyle(PlainButtonStyle())
            .accessibility(identifier: "closeButton")
                .padding()
            
        }.background(self.typesVM.color)
            .listRowInsets(EdgeInsets())
    }
}
...
