...
            VStack{
                VStack{
                    Text("# \(self.pokemonDetailVM.id)")
                        .textStyle(PokemonNameDetailStyle())
                    Text(self.pokemonDetailVM.name.capitalized)
                        .textStyle(PokemonNameDetailStyle())
                        .accessibility(identifier: "namePokemon")
                        .padding()
                }.padding(.top, 30)
                
                HStack(spacing: 20){
                    ForEach(self.pokemonDetailVM.types, id: \.self) { type in
                        
...
                                    .clipShape(RoundedRectangle(cornerRadius: 5))
                                    .overlay(RoundedRectangle(cornerRadius: 5).stroke(lineWidth: 0.9)
                                        .foregroundColor(Types.Pokemon(rawValue: type.name)!.color))
                                
                            }
                        }.buttonStyle(ButtonAnimatedStyle())
                        .accessibility(identifier: "typePokemon")
                    }
                    
                }.padding(.bottom)
            }
            VStack{
                ImageViewComponent(url: self.pokemonDetailVM.urlImage, type: .banner)
...
